Fix wrong color for working freetime header #597

--- a/resources/varaa/as/styles/main.less
+++ b/resources/varaa/as/styles/main.less
@@ -219,11 +219,11 @@
             color: #ff0000;
         }
         a.backend-tooltip {
-            color: #fff;
+            color: #000;
             display: inline-block;
         }
         span {
-            color: #fff;
+            color: #000;
             position: absolute;
             display: inline-block;
             overflow: hidden;
@@ -252,6 +252,10 @@
     }
     li.freetime-working {
         background: @as_light_purple;
+        a.backend-tooltip {
+            color: #fff;
+            display: inline-block;
+        }
     }
     li.slot-booked-head{
         border-bottom: 0;
